--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Zikai Song"
-  avatar           : "profile.jpeg"
+  avatar           : "https://skyesong38.github.io/images/profile.jpeg"
   bio              : "PhD student at School of Computer Science & Technology, HUST"
   location         : 
   employer         :
