--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Zikai Song"
+  name             : "Zikai Song(宋子恺)"
   avatar           : "https://skyesong38.github.io/images/profile.jpeg"
   bio              : "PhD student at School of Computer Science & Technology, HUST"
   location         : 
